# oca-bin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml.example
.github/workflows/: publikigo.yml
src/: build.rs  cache.rs  config.rs  dependency_graph.rs  error.rs  main.rs  mapping.rs  petgraph.rs  presentation_command.rs  utils.rs  validate.rs
src/tui/: app.rs  bundle_info.rs  bundle_list.rs  changes.rs  details.rs  errors_window.rs  item.rs  list.rs  logging.rs  mod.rs
src/tui/output_window/: error_list.rs  errors_window.rs  message_list.rs  mod.rs  output_window.rs
