[package]
name = "oca"
version = "0.1.0"
edition = "2021"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
license = "EUPL-1.2"
readme = "README.md"
description = "Tool to deal with OCA ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oca"
path = "src/main.rs"

[dependencies]
dirs = "5.0.1"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.20"
oca-rs = { version = "0.3.6", features = ["local-references"] }
env_logger = "0.10.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
toml = "0.5"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
