[package]
name = "oca"
version = "0.4.5"
edition = "2021"
authors = ["Marcin Olichwiruk <marcin.olichwiruk@opensoftware.pl>", "Robert Mitwicki <robert.mitwicki@opensoftware.pl>", "Michał Pietrus <michal.pietrus@opensoftware.pl>"]
license = "EUPL-1.2"
readme = "README.md"
description = "Tool to deal with OCA ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "oca"
path = "src/main.rs"

[dependencies]
dirs = "5.0.1"
clap = { version = "4.0.29", features = ["derive"] }
log = "0.4.20"
oca-rs = { version = "0.5.4", features = ["local-references"] }
oca-ast-semantics = { version = "0.5.4"}
oca-bundle-semantics = { version = "0.5.4"}
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
toml = "0.5"
said = { version = "0.4.1", features = ["macros"] }
oca-presentation = { version = "0.7.2" }
isolang = { version = "2.3.0", features = ["serde"] }
walkdir = "2.3"
indexmap = "2.1.0"
thiserror = "1.0.56"
recursion = "0.5.2"
itertools = "0.12.0"
serde_yaml = "0.9.30"
regex = "1.10.3"
ratatui = "0.26.1"
crossterm = "0.27.0"
anyhow = "1.0.80"
petgraph = "0.6.4"
tui-tree-widget = "0.19.0"
throbber-widgets-tui = "0.4.1"
tui-widget-list = "=0.8.2"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
lazy_static = "1.4.0"
color-eyre = "0.6.3"
url = "2.5.2"

[dev-dependencies]
tempdir = "0.3.7"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[profile.release]
debug = true
